# autodiff

./: .gitignore  LICENSE  README.md  d_5d584489adcdc3c2___init___py.html  d_5d584489adcdc3c2_auto_diff_py.html  d_b890f2831ede8e3e___init___py.html  d_b890f2831ede8e3e_auto_diff_math_py.html  d_b890f2831ede8e3e_comp_graph_py.html  d_b890f2831ede8e3e_dual_numbers_py.html  driver_script.py  index.html  pyproject.toml  status.json
.github/workflows/: code_coverage.yml  publish_testpypi.yml  test.yml
docs/: documentation.md  milestone1.md  milestone2.md  milestone2_progress.md
docs/sphinx/source/: autodiff.rst  conf.py
docs/sphinx_documentation/: conf.py  modules.rst
docs/sphinx_documentation/_build/doctrees/: autodiff.doctree  autodiff.utils.doctree  environment.pickle  index.doctree  modules.doctree
docs/sphinx_documentation/_build/html/: .buildinfo  autodiff.html  autodiff.utils.html  genindex.html  index.html  modules.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/sphinx_documentation/_build/html/_modules/: index.html
docs/sphinx_documentation/_build/html/_modules/autodiff/: auto_diff.html
docs/sphinx_documentation/_build/html/_sources/: autodiff.utils.rst.txt  index.rst.txt
src/autodiff/: __init__.py  auto_diff.py
src/autodiff/utils/: auto_diff_math.py  comp_graph.py  dual_numbers.py
src/utils/: auto_diff_math.py  dual_numbers.py
tests/: .coverage  check_coverage.sh  run_tests.sh  test_auto_diff.py  test_auto_diff_math.py  test_auto_diff_rev.py  test_comp_graph.py  test_dual_numbers.py
(+2 files in other folders)
