[build-system]
requires = ["setuptools>=61.0", "numpy==1.21.5", "pytest==6.2.5", "toposort==1.7"]
build-backend = "setuptools.build_meta"

[project]
name = "auto_diff"
version = "0.0.1"
authors = [
  { name="Team 14", email="gefstathiadis@hsph.harvard.edu" },
]
description = "A package to perform automatic differentiation."
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]


[project.urls]
"Homepage" = "https://code.harvard.edu/CS107/team14"
"Bug Tracker" = "https://code.harvard.edu/CS107/team14/issues"
